<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/create_page"
        android:icon="@android:drawable/ic_menu_save"
        android:background="@mipmap/brown"
        android:backgroundTint="@null"
        android:title="@string/create_page" />
    <item
        android:id="@+id/list_page"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:background="@mipmap/brown"
        android:backgroundTint="@null"
        android:title="@string/list_page" />
    <item
        android:id="@+id/calculate_page"
        android:icon="@android:drawable/ic_menu_manage"
        android:background="@mipmap/brown"
        android:backgroundTint="@null"
        android:title="@string/calculate_page" />
</menu>