<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleView"
        style="@style/common_textView"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/titleView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/title"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/title"
        style="@style/common_editText"
        android:layout_width="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:hint="@string/title"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@id/titleView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/costView"
        style="@style/common_textView"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/costView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cost"
        app:layout_constraintTop_toBottomOf="@id/titleView" />

    <EditText
        android:id="@+id/cost"
        style="@style/common_editText"
        android:layout_width="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:hint="@string/cost"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@id/costView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/typeView"
        style="@style/common_textView"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/typeView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/type"
        app:layout_constraintTop_toBottomOf="@id/costView" />

    <Spinner
        android:id="@+id/type"
        style="@style/expense_type_spinner"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/typeView"
        app:layout_constraintTop_toBottomOf="@id/cost" />

    <TextView
        android:id="@+id/dateView"
        style="@style/common_textView"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/dateView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/date"
        app:layout_constraintTop_toBottomOf="@id/typeView" />

    <Button
        android:id="@+id/date"
        style="@style/expense_button"
        android:background="@mipmap/yellow"
        android:backgroundTint="@null"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:textColor="#2D46CF"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dateView"
        app:layout_constraintTop_toBottomOf="@id/type" />

    <EditText
        android:id="@+id/description"
        style="@style/common_editText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:gravity="start"
        android:autofillHints=""
        android:hint="@string/description"
        android:inputType="text"
        android:textSize="20sp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date" />

    <Button
        android:id="@+id/create"
        style="@style/expense_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/ultra"
        android:text="@string/create"
        android:textColor="#000000"
        android:textSize="20sp"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>