<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExpenseFragment"
    android:background="@drawable/background">


    <TextView
        android:id="@+id/expense_title_view"
        style="@style/common_textView"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/expense_title_view"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/expense_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/expense_cost_view"
        style="@style/common_textView"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/expense_cost_view"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/expense_cost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expense_title_view" />

    <TextView
        android:id="@+id/expense_type_view"
        style="@style/common_textView"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/expense_type_view"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/expense_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expense_cost_view" />

    <TextView
        android:id="@+id/expense_date_view"
        style="@style/common_textView"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/expense_date_view"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/expense_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expense_type_view" />

    <TextView
        android:id="@+id/expense_description_view"
        style="@style/common_textView"
        android:layout_width="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/expense_description_view"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expense_date_view" />

    <EditText
        android:id="@+id/expense_title"
        style="@style/common_editText"
        android:layout_width="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/expense_title_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/expense_cost"
        style="@style/common_editText"
        android:layout_width="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/expense_cost_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expense_title" />

    <Spinner
        android:id="@+id/expense_type"
        style="@style/type_spinner"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/expense_type_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expense_cost" />

    <Button
        android:id="@+id/expense_date"
        style="@style/common_button"
        android:layout_width="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:textColor="#4CAF50"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/expense_date_view"
        app:layout_constraintTop_toBottomOf="@id/expense_type" />

    <EditText
        android:id="@+id/expense_description"
        style="@style/common_editText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="@drawable/ele_background"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/expense_description_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit" />

    <Button
        android:id="@+id/edit"
        style="@style/common_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/ultra"
        android:text="@string/edit"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/delete" />

    <Button
        android:id="@+id/delete"
        style="@style/common_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/ultra"
        android:text="@string/delete"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/edit"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
