<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_title"
        style="@style/dialog_view"
        android:background="@mipmap/green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_type"
        style="@style/dialog_view"
        android:textSize="12sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/typeView"
        app:layout_constraintBottom_toTopOf="@id/dialog_cost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_title" />

    <TextView
        android:id="@+id/dialog_cost"
        style="@style/dialog_view"
        android:textSize="12sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/costView"
        app:layout_constraintBottom_toTopOf="@id/dialog_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_type" />

    <TextView
        android:id="@+id/dialog_date"
        style="@style/dialog_view"
        android:textSize="12sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/dateView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_cost" />

    <TextView
        android:id="@+id/dialog_description"
        style="@style/dialog_view"
        android:layout_width="match_parent"
        android:gravity="start"
        android:padding="10dp"
        android:textSize="12sp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="備註"
        app:layout_constraintTop_toBottomOf="@id/dialog_date"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>